--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,9 +2,12 @@
 
 :root {
     box-sizing: border-box;
-/* font-size: px; */            /* 1em = ?px !!! Not cool for accessibility !!! */
-/*  --main-radius: 0.5em; */
-/*  --main-padding: 0.5em; */
+    --primary-color: #FFFFFF;
+    --secondary-color: #EBEBEB;
+    --tertiary-color: #DD5555;
+    --text-color: #7D7D7D;
+    --shadow-color: #DBDBDB;
+    --border-radius: 0.2em;
 }
 
 /* --- Normalize --- */ 
@@ -21,12 +24,71 @@ ul {
 
 /* --- Layout --- */
 
-body {}
+body {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+}
+
+header, #social-media, main, footer {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    width: 40%;
+    margin: auto;
+    margin-top: 2.5em;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-areas: 
+    "title      title"
+    "visual     synopsis";
+    grid-template-columns: 1fr 3fr;
+    max-width: 100%;
+}
+.grid-container .title {
+    grid-area: title;
+}
+.grid-container .visual {
+    grid-area: visual;
+}
+.grid-container .synopsis {
+    grid-area: synopsis
+}
+
 
 /* --- Styling --- */
 
-header {}
+body {
+    background-color: var(--secondary-color);
+    color: var(--text-color);
+/*  font-family: 'Montserrat', sans-serif; */
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.5em;
+    text-align: justify;
+}
 
-main {}
+header, #social-media, main, footer {
+    background-color: var(--primary-color);
+    box-sizing: border-box;
+    border-radius: var(--border-radius);
+    box-shadow: 2px 2px var(--shadow-color), -2x 2px var(--shadow-color);
+}
+
+header {
+    padding: 1em;
+}
+
+header h1 {
+    color: var(--tertiary-color);
+    font-weight: bold;
+}
+
+main {
+    padding: 1.5em;
+}
+
+
 
 footer {}
