--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,11 @@
 
 a {
     text-decoration: none;
+    color: inherit;
+}
+
+figure {
+    margin: 0;
 }
 
 ul {
@@ -41,11 +46,14 @@ header, #social-media, main, footer {
 
 .grid-container {
     display: grid;
+    gap: 1em;
     grid-template-areas: 
-    "title      title"
+    "visual      title"
     "visual     synopsis";
     grid-template-columns: 1fr 3fr;
     max-width: 100%;
+    align-items: center;
+    justify-items: center;
 }
 .grid-container .title {
     grid-area: title;
@@ -63,9 +71,9 @@ header, #social-media, main, footer {
 body {
     background-color: var(--secondary-color);
     color: var(--text-color);
-/*  font-family: 'Montserrat', sans-serif; */
-    font-family: 'Open Sans', sans-serif;
-    line-height: 1.5em;
+    font-family: 'Montserrat', sans-serif;
+/*  font-family: 'Open Sans', sans-serif; */
+    line-height: 1.5rem;
     text-align: justify;
 }
 
@@ -73,22 +81,46 @@ header, #social-media, main, footer {
     background-color: var(--primary-color);
     box-sizing: border-box;
     border-radius: var(--border-radius);
-    box-shadow: 2px 2px var(--shadow-color), -2x 2px var(--shadow-color);
+    box-shadow: 2px 2px var(--shadow-color), -2px 2px var(--shadow-color);
 }
 
 header {
     padding: 1em;
 }
-
-header h1 {
+#hero { /* Does not work */
+    clip-path: circle(50px at center);
+}
+h1 {
     color: var(--tertiary-color);
     font-weight: bold;
 }
+#wiki-link {
+    background-color: var(--tertiary-color);
+    border-radius: var(--border-radius);
+    color: var(--primary-color);
+/*  font-family: 'Montserrat', sans-serif; */
+    font-weight: bold;
+    padding: 0.5em
+}
+/* #wiki-link:visited {
+    background-color: var(--text-color); 
+} */
+#wiki-link:hover {
+    background-color: red;
+}
+#wiki-link:active {
+    background-color: var(--shadow-color);
+}
+
 
 main {
     padding: 1.5em;
 }
-
-
+figure {
+    max-width: 100%;
+}
+img {
+    max-width: 100%;
+}
 
 footer {}
