--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,11 +2,16 @@
 
 :root {
     box-sizing: border-box;
+
     --primary-color: #FFFFFF;
-    --secondary-color: #EBEBEB;
+    --secondary-color: #DBDBDB;
     --tertiary-color: #DD5555;
+
+    --background-color: #EBEBEB;
+    --portrait-color: #CCCCCC;
+
     --text-color: #7D7D7D;
-    --shadow-color: #DBDBDB;
+    --icons-color: #D3D3D3;
     --border-radius: 0.2em;
 }
 
@@ -69,10 +74,10 @@ header, #social-media, main, footer {
 /* --- Styling --- */
 
 body {
-    background-color: var(--secondary-color);
+    background-color: var(--background-color);
     color: var(--text-color);
     font-family: 'Montserrat', sans-serif;
-/*  font-family: 'Open Sans', sans-serif; */
+    font-family: 'Open Sans', sans-serif; */
     line-height: 1.5rem;
     text-align: justify;
 }
@@ -81,15 +86,28 @@ header, #social-media, main, footer {
     background-color: var(--primary-color);
     box-sizing: border-box;
     border-radius: var(--border-radius);
-    box-shadow: 2px 2px var(--shadow-color), -2px 2px var(--shadow-color);
+    box-shadow: 2px 2px var(--secondary-color), -2px 2px var(--secondary-color);
 }
 
 header {
     padding: 1em;
 }
-#hero { /* Does not work */
-    clip-path: circle(50px at center);
+
+#hero { 
+    width: 100px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    border: 0.2rem solid var(--secondary-color);
 }
+#hero img {
+    display: inline;
+    margin: auto;
+    height: 100%;
+    width: auto;
+}
+
 h1 {
     color: var(--tertiary-color);
     font-weight: bold;
@@ -98,7 +116,7 @@ h1 {
     background-color: var(--tertiary-color);
     border-radius: var(--border-radius);
     color: var(--primary-color);
-/*  font-family: 'Montserrat', sans-serif; */
+  font-family: 'Montserrat', sans-serif; 
     font-weight: bold;
     padding: 0.5em
 }
@@ -106,10 +124,30 @@ h1 {
     background-color: var(--text-color); 
 } */
 #wiki-link:hover {
-    background-color: red;
+    background-color: #FF0000;
 }
 #wiki-link:active {
-    background-color: var(--shadow-color);
+    background-color: var(--secondary-color);
+}
+
+#social-media ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    gap: 2rem;
+    padding: 3rem;
+    color: var(--icons-color);
+}
+#social-media li {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+li i {
+    font-size: 1.2rem;
+    padding: 0.5rem;
 }
 
 
@@ -123,4 +161,12 @@ img {
     max-width: 100%;
 }
 
-footer {}
+footer a {
+    font-weight: bold;
+}
+footer a:hover {
+    color: var(--tertiary-color)
+}
+footer a:active {
+    color: #FF0000
+}
